--- a/ForumApplication/appsettings.Development.json
+++ b/ForumApplication/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": { "ForumApplicationDBConnectionString": "Data Source = ForumApplication.db" }
 }
